# server/docs/swagger.json
@@ -6,6 +6,63 @@
         "version": "1.0"
     },
     "paths": {
+        "/answer/": {
+            "post": {
+                "description": "添加答案",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "答案"
+                ],
+                "summary": "添加",
+                "parameters": [
+                    {
+                        "description": "答案",
+                        "name": "answer",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/entity.Answer"
+                            }
+                        }
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/login": {
+            "post": {
+                "description": "登录",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "公共"
+                ],
+                "summary": "登录",
+                "parameters": [
+                    {
+                        "description": "key",
+                        "name": "key",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {}
+            }
+        },
         "/question/": {
             "put": {
                 "description": "更新题目",
@@ -58,7 +115,7 @@
                 "responses": {}
             }
         },
-        "/question/list/{id}": {
+        "/question/list": {
             "get": {
                 "description": "获取题目列表列表",
                 "produces": [
@@ -78,7 +135,7 @@
                     {
                         "type": "integer",
                         "description": "页码",
-                        "name": "page",
+                        "name": "pageNum",
                         "in": "query"
                     },
                     {
@@ -176,7 +233,7 @@
         },
         "/survey/list": {
             "get": {
-                "description": "获取题目列表列表",
+                "description": "获取问卷列表",
                 "produces": [
                     "application/json"
                 ],
@@ -194,7 +251,7 @@
                     {
                         "type": "integer",
                         "description": "页码",
-                        "name": "page",
+                        "name": "pageNum",
                         "in": "query"
                     },
                     {
@@ -251,9 +308,47 @@
         }
     },
     "definitions": {
+        "entity.Answer": {
+            "type": "object",
+            "properties": {
+                "contact": {
+                    "type": "string"
+                },
+                "content": {
+                    "type": "string"
+                },
+                "create_at": {
+                    "type": "string"
+                },
+                "ext_msg": {
+                    "type": "string"
+                },
+                "finger": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "ip": {
+                    "type": "string"
+                },
+                "label": {
+                    "type": "string"
+                },
+                "question_id": {
+                    "type": "integer"
+                },
+                "survey_id": {
+                    "type": "integer"
+                }
+            }
+        },
         "entity.Option": {
             "type": "object",
             "properties": {
+                "has_ext_msg": {
+                    "type": "string"
+                },
                 "id": {
                     "type": "integer"
                 },
@@ -261,6 +356,9 @@
                     "type": "string"
                 },
                 "question_id": {
+                    "type": "integer"
+                },
+                "survey_id": {
                     "type": "integer"
                 },
                 "value": {
@@ -290,7 +388,7 @@
                     "type": "string"
                 },
                 "type": {
-                    "type": "integer"
+                    "type": "string"
                 }
             }
         },
@@ -300,8 +398,14 @@
                 "description": {
                     "type": "string"
                 },
+                "end_time": {
+                    "type": "string"
+                },
                 "id": {
                     "type": "integer"
+                },
+                "need_contact": {
+                    "type": "string"
                 },
                 "questions": {
                     "type": "array",
@@ -309,10 +413,25 @@
                         "type": "integer"
                     }
                 },
+                "repeat": {
+                    "description": "是否允许重复提交 no yes yes_but_update",
+                    "type": "string"
+                },
+                "repeat_check": {
+                    "description": "重复提交检查方式 finger contact",
+                    "type": "string"
+                },
+                "start_time": {
+                    "type": "string"
+                },
                 "status": {
                     "type": "string"
                 },
                 "title": {
+                    "type": "string"
+                },
+                "water_mark": {
+                    "description": "水印",
                     "type": "string"
                 }
             }
